--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,7 +41,7 @@
 			"type": "npm",
 			"script": "watch:esbuild",
 			"group": "build",
-			"problemMatcher": "$esbuild-watch",
+			//	"problemMatcher": "$esbuild-watch",
 			"isBackground": true,
 			"presentation": {
 				"group": "watch",
